# OpenCL-Demo

./: CMakeLists.txt  main.cpp  readme.md  throws.h  todo.md
kernels/: .gitignore  CMakeLists.txt  compose_header.py  convolution1d.ocl  kernel_addmul.ocl
src/: main.cpp  time.h
